# pkg/models/forms/inputForms/UsersInputForms.go
@@ -5,7 +5,7 @@ type AddUserRoleInput struct {
 	Roles  []string `json:"roles" binding:"required"`
 }
 
-type SignUpUserForm struct {
+type SignUpUserInput struct {
 	Email      string   `json:"email" binding:"required"`
 	Password   string   `json:"password" binding:"required"`
 	FirstName  string   `json:"first_name" binding:"required"`
@@ -13,11 +13,16 @@ type SignUpUserForm struct {
 	RolesNames []string `json:"roles_names"`
 }
 
-type DeleteUserRole struct {
+type DeleteUserRoleInput struct {
 	UserId   uint   `json:"user_id" binding:"required"`
 	RoleName string `json:"role_name" binding:"required"`
 }
 
 type UserInfoInput struct {
 	UserId uint `json:"user_id"`
+}
+
+type PasswordChangeInput struct {
+	OldPassword string `json:"old_password" binding:"required"`
+	NewPassword string `json:"new_password" binding:"required"`
 }
